infra/kubernetes/base/integrationhub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: integrationhub
  labels:
    app: integrationhub
    component: service
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8006
    targetPort: 8006
  - name: api
    protocol: TCP
    port: 8007
    targetPort: 8007
  - name: admin
    protocol: TCP
    port: 8010
    targetPort: 8010
  - name: metrics
    protocol: TCP
    port: 9091
    targetPort: 9091
  selector:
    app: integrationhub
